Solve the flickering issue for iPAD

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -22,6 +22,8 @@ body
 	//transition-delay: 0.1s;
 	transition-duration: 0.75s;
 	shape-rendering: crispEdges;
+	//-webkit-backface-visibility: hidden;
+	-webkit-tap-highlight-color:rgba(0,0,0,0.0);
 }
 
 .cell--blue
